--- a/src/pages/index/index.less
+++ b/src/pages/index/index.less
@@ -1,8 +1,94 @@
-
+page {
+  width: 100vw;
+  height: 100vh;
+  background-color: #1F1F37;
+}
 
 .index-root {
   width: 100vw;
   height: 100vh;
-  background-color: #1F1F37;
   overflow: hidden;
+  padding-top: 50px;
+  display: flex;
+  flex-direction: column;
+  //justify-content: space-between;
+  align-items: center;
 }
+
+.header-info {
+  height: 250px;
+  width: 100%;
+  background-color: red;
+  color: white;
+}
+
+.main-container {
+  width: 100%;
+  height: 20px;
+  background-color: white;
+}
+
+.footer-info {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  box-sizing: border-box;
+  position: fixed;
+  width: 100%;
+  left: 0px;
+  bottom: 50px;
+  padding: 0 80px;
+
+  .my-info {
+    display: flex;
+    .my-face {
+      display: block;
+      box-sizing: border-box;
+      border: 5px solid #F8DB8F;
+      border-radius: 50%;
+    }
+    .open-data-face {
+      display: block;
+      width: 66px;
+      height: 66px;
+      border-radius: 50%;
+      overflow: hidden;
+      padding: 0;
+      margin: 10px;
+    }
+
+    .my-nick-name {
+      display: block;
+      color: #F8DB8F;
+      margin-left: 20px;
+      .name {
+        font-size: 28px;
+        line-height: 42px;
+      }
+      .num {
+        display: block;
+        .bean {
+          display: inline-block;
+          width: 28px;
+          height: 28px;
+        }
+      }
+    }
+
+
+  }
+
+  .money-btn {
+    display: block;
+    margin: 0;
+    font-size: 36px;
+    line-height: 54px;
+    height: 54px;
+    border-radius: 5px;
+    background-color: #F8DB8F;
+    border: 2px solid #B06F2E;
+    color: #B06F2E;
+    padding: 0 20px;
+  }
+}
+
