--- a/src/pages/index/index.less
+++ b/src/pages/index/index.less
@@ -23,9 +23,15 @@ page {
 }
 
 .main-container {
+  display: block;
+  box-sizing: border-box;
   width: 100%;
-  height: 20px;
-  background-color: white;
+  padding: 0 80px;
+  .img {
+    display: block;
+    width: 590px;
+    height: 843px;
+  }
 }
 
 .footer-info {
