--- a/src/pages/index/index.less
+++ b/src/pages/index/index.less
@@ -16,9 +16,13 @@
 
 .title {
   width: 100%;
-  height: 50px;
   flex-shrink: 0;
-  background-color: aqua;
+  image {
+    display: block;
+    margin: 0 auto;
+    width: 317px;
+    height: 37px;
+  }
 }
 
 .container {
@@ -224,4 +228,37 @@
     height: 95px;
   }
 
+}
+
+.share-pop {
+  display: block;
+  width: 750px;
+  height: 700px;
+  position: fixed;
+  top: 50%;
+  margin-top: -350px;
+  z-index: 1010;
+  visibility: hidden;
+  opacity: 0;
+  transition: opacity 300ms cubic-bezier(0.36, 0.66, 0.04, 1) 200ms;
+  &.show {
+    opacity: 1;
+    visibility: visible;
+  }
+  .img-need-share-btn {
+    position: absolute;
+    z-index: 1;
+    margin: 0 auto;
+    padding: 0;
+    display: block;
+    box-sizing: border-box;
+    width: 750px;
+    border: none;
+    background-color: transparent;
+  }
+  .img-need-share-bg {
+    display: block;
+    width: 750px;
+    height: 766px;
+  }
 }
