--- a/src/pages/index/index.less
+++ b/src/pages/index/index.less
@@ -9,7 +9,7 @@
   height: 100vh;
   display: flex;
   flex-direction: column;
-  padding-top: 50px;
+  padding-top: 70px;
   box-sizing: border-box;
   background-color: #1F1F37;
 }
@@ -46,12 +46,13 @@
 }
 
 .top-img {
+  display: block;
   margin: 0 auto;
   width: 520px;
-  height: 110px;
-  background-image: url("../../assets/header.png");
-  background-repeat: no-repeat;
-  background-size: 520px 110px;
+  height: 130px;
+  //background-image: url("../../assets/header.png");
+  //background-repeat: no-repeat;
+  //background-size: 520px 110px;
 }
 
 .bottom-container {
@@ -91,10 +92,15 @@
       }
       .num {
         display: block;
+        margin-top: 5px;
+        font-size: 24px;
+        line-height: 28px;
         .bean {
           display: inline-block;
+          vertical-align: middle;
           width: 28px;
           height: 28px;
+          margin-right: 10px;
         }
       }
     }
@@ -102,13 +108,14 @@
 
   .money-btn {
     display: block;
+    box-sizing: border-box;
     margin: 0;
-    font-size: 36px;
-    line-height: 54px;
-    height: 54px;
+    font-size: 32px;
+    font-weight: bold;
+    line-height: 68px;
     border-radius: 15px;
     background-color: #F8DB8F;
-    border: 2px solid #B06F2E;
+    border: 4px solid #B06F2E;
     color: #B06F2E;
     padding: 0 20px;
   }
@@ -205,7 +212,7 @@
   height: 700px;
   position: fixed;
   top: 50%;
-  margin-top: -350px;
+  margin-top: -190px;
   z-index: 1010;
   visibility: hidden;
   opacity: 0;
@@ -259,6 +266,6 @@
   .img-need-share-bg {
     display: block;
     width: 750px;
-    height: 766px;
+    height: 834px;
   }
 }
